Отредактировал css для увеличение маштабов. Дописал функцию обновление статуса продукта. Добавлен отдельный скрипт для подчищения бд

--- a/kmp260_line_1/templates/kpm260_line_1/kpm260-line-1.html
+++ b/kmp260_line_1/templates/kpm260_line_1/kpm260-line-1.html
@@ -9,6 +9,8 @@
     <title>Дашборд принтера</title>
     <style>
         body {
+            overflow: hidden;
+            
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -17,8 +19,8 @@
 
         .header {
             text-align: center;
-            padding: 10px; /* Уменьшение отступов вокруг заголовка */
-            font-size: 20px; /* Уменьшение размера шрифта в заголовке */
+            padding: 5px; /* Увеличение отступов вокруг заголовка */
+            font-size: 30px; /* Увеличение размера шрифта в заголовке */
             background-color: #333;
             color: #fff;
             display: flex; /* Использование flexbox для размещения в два столбца */
@@ -28,7 +30,13 @@
         .info-header-1,
         .info-header-2 {
             flex: 1; /* Равномерное распределение места между двумя столбцами */
-            padding: 10px;
+            padding: 5px;
+        }
+
+        .info-header-1,
+        .info-header-2, p {
+            margin-top: 7px;
+            margin-bottom: 7px;
         }
 
         .dashboard {
@@ -40,23 +48,17 @@
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 20px;
-            font-size: 20px; /* Увеличение размера шрифта в таблице */
+            font-size: 36px; /* Увеличение размера шрифта в таблице */
         }
 
         th, td {
-            border: 2px solid #ddd;
-            padding: 12px; /* Увеличение размера ячеек */
-            text-align: left;
-        }
-
-        tr.print-row {
-            background-color: lightblue; /* Цвет фона для выделенной строки при печати */
-            font-weight: bold; /* Жирный шрифт для выделенной строки при печати */
+            border: 1px solid #ddd;
+            padding: 20px; /* Увеличение размера ячеек */
+            text-align: center;
         }
 
         tr.selected-row {
-            border: 5px solid red; /* Красная обводка для выделенной строки */
+            border: 10px solid red; /* Красная обводка для выделенной строки */
             border-radius: 5px; /* Задаем гладкие углы */
             font-weight: bold; /* Жирный шрифт для выделенной строки */
         }
@@ -66,25 +68,16 @@
             color: #fff;
         }
 
-        /* Стиль для кружочка */
-        .circle {
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            background-color: green;
-            display: inline-block;
-            margin-right: 10px;
-        }
-
         .check-mark::before {
             content: '\2713'; /* Юникод символ галочки */
             color: green;
+            font-weight: bold;
         }
 
-        /* Стиль для крестика */
         .cross-mark::before {
             content: '\2717'; /* Юникод символ крестика */
             color: red;
+            font-weight: bold;
         }
     </style>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -95,17 +88,15 @@
     <div class="header">
         <div class="info-header-1">
             <p id="tech-post">Технологический пост: ТП 1</p>
-            <p id="printer-status">Статус принтера: -</p>
             <p id="current-pal">Текущий номер палеты: -</p>
+            
         </div>
         <div class="info-header-2">
+            <p id="printer-status">Статус принтера: -</p>
             <p></p>
-            <p></p>
-            <p>Другая информация... </p>
         </div>
     </div>
     
-
     <div class="dashboard">
         <table id="history-table">
             <thead>
@@ -132,15 +123,16 @@
             </tbody>
         </table>
     </div>
+
     <script>
     var selectedRow = null;
 
 
     function updateTable(data) {
         var tableBody = $('#history-table tbody');
-        tableBody.empty(); // Очищаем текущие данные в теле таблицы
+        tableBody.empty(); 
 
-        // Добавляем новые данные
+        
         data.forEach(function (record) {
             var newRow = $('<tr>');
             newRow.append('<td>' + record.PalNo + '</td>');
@@ -149,21 +141,21 @@
             newRow.append('<td>' + record.Barcode + '</td>');
             newRow.append('<td>' + record.Product + '</td>');
 
-            // Создаем элемент <span> для столбца "Статус"
+            
             var statusCell = $('<td>');
             var statusIcon = $('<span>');
 
-            // Проверяем значение в столбце "Статус" и устанавливаем соответствующий класс и текст
+           
             if (record.StatusPrint) {
-                statusIcon.addClass('check-mark'); // класс для галочки
+                statusIcon.addClass('check-mark');
             } else {
-                statusIcon.addClass('cross-mark'); // класс для крестика
+                statusIcon.addClass('cross-mark'); 
             }
 
             statusCell.append(statusIcon);
             newRow.append(statusCell);
 
-            // Проверяем условие для выделения строки
+            
             if (selectedRow && selectedRow.PalNo === record.PalNo && selectedRow.NumProd === record.NumProd) {
                 newRow.addClass('selected-row');
             };
@@ -178,13 +170,8 @@
 
         socket.onopen = function (event) {
             console.log('WebSocket connection opened');
-            var request_data = {'message': 'GET DATA'};
-            try {
-                socket.send(JSON.stringify(request_data));
-            } catch (error) {
-                console.error('Error sending message:', error);
-            }
-        };
+            send_command(socket, 'GET DATA')
+            
 
         socket.onmessage = function (event) {
             console.log('Сообщение подключения');
@@ -196,7 +183,7 @@
                     updateTable(data.event_data);
                 }
                 else if (data.internal_type === 'status_updated') {
-                    read_printer_status(data.event_data);
+                    read_printer_status(socket, data.event_data);
                 }
                 
                 
@@ -205,55 +192,69 @@
 
         socket.onclose = function (event) {
             console.error('WebSocket connection closed:', event);
-            // Переподключение веб-сокета после закрытия
-            setTimeout(connectWebSocket, 1000); // Повторная попытка через 1 секунду
+            setTimeout(connectWebSocket, 1000);
         };
     }
 
-    function read_printer_status(data) {
+    function read_printer_status(socket=None, data) {
         console.log('Продумать как обработать данные. статусы: NEXT, LAST PAL, PRINT, WAIT, NOT CONNECT');
 
         var printerStatusElement = document.getElementById('printer-status');
         var currentPalElement = document.getElementById('current-pal');
 
         if (data.status_printer === 'WAIT') {
-            // Обновление статуса принтера и текущего номера палеты при статусе 'WAIT'
             printerStatusElement.textContent = 'Статус принтера: Ожидает';
             currentPalElement.textContent = 'Текущий номер палеты: -';
             selectedRow = null
             $('#history-table tbody tr').removeClass('selected-row');
         } else if (data.status_printer === 'PRINT') {
-            // Обновление статуса принтера при статусе 'PRINT'
+          
             printerStatusElement.textContent = 'Статус принтера: Печатает';
             currentPalElement.textContent = 'Текущий номер палеты: ' + data.body.PalNo;
-            selectedRow = data.body; // Фиксируем выделенную строку
+            selectedRow = data.body; 
             highlightRow(data.body.PalNo, data.body.NumProd, data.body.Barcode);
         } else if (data.status_printer === 'LAST PAL') {
-            // Обновление статуса принтера при статусе 'LAST PAL'
+            
             printerStatusElement.textContent = 'Статус принтера: Предыдущая палета';
             currentPalElement.textContent = 'Текущий номер палеты: -';
             selectedRow = null
             $('#history-table tbody tr').removeClass('selected-row');
-
+        } else if (data.status_printer === 'NOT CONNECT') {
+            
+            printerStatusElement.textContent = 'Статус принтера: Нет соединения';
+            currentPalElement.textContent = 'Текущий номер палеты: -';
+            selectedRow = null
+            $('#history-table tbody tr').removeClass('selected-row');
         }
+
+        send_command(socket, 'GET DATA')
+    }
+
+    function send_command(socket, command) {
+        var request_data = {'message': command};
+            try {
+                socket.send(JSON.stringify(request_data));
+            } catch (error) {
+                console.error('Error sending message:', error);
+            }
+        };
     }
 
     function highlightRow(PalNo, NumProd, Barcode) {
-        // Снимаем выделение со всех строк
+       
         $('#history-table tbody tr').removeClass('selected-row');
 
-        // Находим строку таблицы по номеру палеты, номеру продукта и баркоду
         var row = $('#history-table tbody tr').filter(function() {
             return $(this).find('td:eq(0)').text() == PalNo &&
                 $(this).find('td:eq(1)').text() == NumProd &&
                 $(this).find('td:eq(3)').text() == Barcode;
         });
 
-        // Применяем стиль к найденной строке
+        
         row.addClass('selected-row');
     }
 
-    // Подключение веб-сокета при загрузке страницы
+   
     $(document).ready(function () {
         connectWebSocket();
     });
