--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -77,16 +77,17 @@
 <body>
 
     <nav>
-        <div class="brand">DСK</div>
+        <div class="brand">ДСК</div>
         <div class="nav-links">
             <a href="#">Главная</a>
             <div class="dropdown">
                 <a href="#">КПМ-260</a>
                 <div class="dropdown-content">
-                    <a href="{% url 'main:kpm_line_1' %}">Линия №1</a>
+                    <a href="admin/">Линия №1</a>
                     <a href="#">Другие линии</a>
                 </div>
             </div>
+            <a href="#">Админка</a>
         </div>
     </nav>
 
